syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "vehicle_location_api.protos.V1";

message VehicleLocationEvent {
  google.protobuf.Timestamp timestamp = 1;
  double latitude = 2;
  double longitude = 3;
  double speed = 4;
  double bearing = 5;
  string routeId = 6;
  string licensePlateNumber = 7;
}